# enum-codec

./: Cargo.toml
macro/: Cargo.toml
src/: lib.rs
