[package]
name = "enum-codec"
version = "0.1.0"
documentation = "https://docs.rs/enum-codec/"
description = "Definitions for generating space-efficient encoding for Rust `enum` types."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/enum-tag"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["enum", "c-like", "tag", "discriminant", "tagged"]
categories = ["data-structures", "no-std"]

[dependencies]
enum-codec-macro = { version = "0.1.0", path = "macro" }
enum-tag = "0.3.0"
enum-ref = "0.1.0"

[workspace]
members = ["macro"]
